--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
 
 <body class="main_body">
 	<header>
-		<div class="mp_header conteiner p_middle p15_15">
+		<div class="mp_header conteiner p_middle">
 			<div class="logo_box">
 				<a class="logo" href="">MyPage</a>
 			</div>
 
 			<ul class="mp_nav_list">
-				<li class="nav_item"><a href="#">Main page</a></li>
-				<li class="nav_item"><a href="gallery.html">Gallery</a></li>
-				<li class="nav_item home_work"><a href="#">Home works</a>
+				<li class="nav_item "><a class="home_btn" href="#">Main page</a></li>
+				<li class="nav_item"><a class="gallery_btn" href="gallery.html">Gallery</a></li>
+				<li class="nav_item home_work"><a class="hw_btn" href="#">Home works</a>
 					<ul class="mp_nav_list_2">
 						<li><a href="table.html">Table</a></li>
 						<li><a href="inline_block.html">Inline-Block</a></li>
 						<li><a href="float.html">Float</a></li>
-						<li class="layouts"><a href="#">Layout</a>
+						<li class="layouts"><a class="ly_btn" href="#">Layout</a>
 							<ul class="mp_nav_list_3">
 								<li><a href="flex.html">Flex</a></li>
 							</ul>
@@ -33,12 +33,9 @@
 			</ul>
 
 			<ul class="my_social_list">
-				<li class="my_social_item"><a href="#"><img src="img/social//my_page/facebook-176-svgrepo-com.svg" alt=""
-							width="38" height="38"></a></li>
-				<li class="my_social_item"><a href="#"><img src="img/social/my_page/instagram-svgrepo-com.svg" alt=""
-							width="49" height="49"></a></li>
-				<li class="my_social_item"><a href="#"><img src="img/social/my_page/git-repository-svgrepo-com.svg" alt=""
-							width="49" height="49"></a></li>
+				<li class="my_social_item"><a class="fcb" href="#"></a></li>
+				<li class="my_social_item"><a class="insta" href="#"></a></li>
+				<li class="my_social_item"><a class="gith" href="#"></a></li>
 			</ul>
 		</div>
 	</header>
