--- a/light_side.html
+++ b/light_side.html
@@ -278,14 +278,10 @@
 
 	<footer class="footer">
 		<div class="social gl_conteiner">
-			<a class="item" href="https://www.facebook.com/StarWars" target="_blank"><img src="img/social/facebook.svg"
-					alt="Facebook" width="49" height="48"></a>
-			<a class="item" href="https://www.instagram.com/starwars/" target="_blank"><img src="img/social/instagram.svg"
-					alt="Instagram" width="49" height="48"></a>
-			<a class="item" href="https://twitter.com/starwars" target="_blank"><img src="img/social/twitter.svg"
-					alt="Twitter" width="49" height="48"></a>
-			<a class="item" href="https://www.youtube.com/user/starwars" target="_blank"><img
-					src="img/social/youtube-a3728986e4b2.svg" alt="YouTube" width="49" height="48"></a>
+			<a class="item fcbk" href="https://www.facebook.com/StarWars" target="_blank"></a>
+			<a class="item inst" href="https://www.instagram.com/starwars/" target="_blank"></a>
+			<a class="item twit" href="https://twitter.com/starwars" target="_blank"></a>
+			<a class="item yout" href="https://www.youtube.com/user/starwars" target="_blank"></a>
 		</div>
 	</footer>
 </body>
