gradient and gradient  position; <picture>-webp

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 				</li>
 			</ul>
 
+
 			<ul class="my_social_list">
 				<li class="my_social_item"><a class="fcb" href="#"></a></li>
 				<li class="my_social_item"><a class="insta" href="#"></a></li>
@@ -36,6 +37,23 @@
 			</ul>
 		</div>
 	</header>
+	<main class="p_middle conteiner">
+		<section class=" gradient_content">
+			<div class="gradient_box linear"></div>
+			<div class="gradient_box overlay">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis quae
+				laudantium odit iste! Repellendus saepe delectus architecto. Itaque explicabo dolore temporibus eius
+				vitae excepturi corrupti, dolorum dignissimos. Delectus cumque iste quia, architecto temporibus veniam,
+				veritatis libero natus dicta explicabo tenetur distinctio dolorum atque. Necessitatibus sunt illo in
+				harum, fuga ipsum temporibus totam sit dolores eaque, saepe et unde iure quidem minima vitae rem
+				perferendis? Quis blanditiis a non laboriosam vero necessitatibus. A totam reiciendis recusandae natus
+				voluptate, voluptatibus quisquam ullam delectus magnam quidem architecto. Qui dolorum accusamus
+				temporibus nesciunt possimus adipisci veritatis itaque, fuga illo commodi omnis aspernatur ducimus ipsa
+				expedita non deserunt sapiente deleniti excepturi fugiat vitae tenetur a? Similique adipisci suscipit a
+				nobis impedit! Amet delectus maiores fugiat.</div>
+			<div class="gradient_box radial"></div>
+		</section>
+	</main>
+
 </body>
 
 </html>
