--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		<div class="mp_header conteiner p_middle">
 			<a class="logo" href="">MyPage</a>
 			<ul class="mp_nav_list">
-				<li class="nav_item ">
+				<li class="nav_item svg_link">
 					<a class="home_btn" href="#">
 						<svg class="svg_btn">
 							<use href="#house"></use>
