position for svg icons

--- a/index.html
+++ b/index.html
@@ -9,62 +9,30 @@
 </head>
 
 <body class="main_body">
-
-	<svg class="svg_img" xmlns="http://www.w3.org/2000/svg">
-		<!-- Arrow_down -->
-		<symbol id="arrow_down" viewBox="0 0 24 24" fill="none">
-			<path
-				d="M5.70711 9.71069C5.31658 10.1012 5.31658 10.7344 5.70711 11.1249L10.5993 16.0123C11.3805 16.7927 12.6463 16.7924 13.4271 16.0117L18.3174 11.1213C18.708 10.7308 18.708 10.0976 18.3174 9.70708C17.9269 9.31655 17.2937 9.31655 16.9032 9.70708L12.7176 13.8927C12.3271 14.2833 11.6939 14.2832 11.3034 13.8927L7.12132 9.71069C6.7308 9.32016 6.09763 9.32016 5.70711 9.71069Z"
-				fill="#fff" />
-		</symbol>
-
-		<!-- Arrow left -->
-		<symbol id="arrow_left" viewBox="0 0 24 24" fill="none">
-			<path d="M15 6L9 12L15 18" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-		</symbol>
-
-		<!-- Gallery -->
-		<symbol id="gallery" viewBox="0 0 24 24" fill="none">
-			<path
-				d="M18 8C18 9.10457 17.1046 10 16 10C14.8954 10 14 9.10457 14 8C14 6.89543 14.8954 6 16 6C17.1046 6 18 6.89543 18 8Z"
-				fill="#fff" />
-			<path fill-rule="evenodd" clip-rule="evenodd"
-				d="M11.9426 1.25H12.0574C14.3658 1.24999 16.1748 1.24998 17.5863 1.43975C19.031 1.63399 20.1711 2.03933 21.0659 2.93414C21.9607 3.82895 22.366 4.96897 22.5603 6.41371C22.75 7.82519 22.75 9.63423 22.75 11.9426V12.0309C22.75 13.9397 22.75 15.5023 22.6463 16.7745C22.5422 18.0531 22.3287 19.1214 21.8509 20.0087C21.6401 20.4001 21.3812 20.7506 21.0659 21.0659C20.1711 21.9607 19.031 22.366 17.5863 22.5603C16.1748 22.75 14.3658 22.75 12.0574 22.75H11.9426C9.63423 22.75 7.82519 22.75 6.41371 22.5603C4.96897 22.366 3.82895 21.9607 2.93414 21.0659C2.14086 20.2726 1.7312 19.2852 1.51335 18.0604C1.29935 16.8573 1.2602 15.3603 1.25207 13.5015C1.25 13.0287 1.25 12.5286 1.25 12.001V11.9426C1.24999 9.63424 1.24998 7.82519 1.43975 6.41371C1.63399 4.96897 2.03933 3.82895 2.93414 2.93414C3.82895 2.03933 4.96897 1.63399 6.41371 1.43975C7.82519 1.24998 9.63424 1.24999 11.9426 1.25ZM6.61358 2.92637C5.33517 3.09825 4.56445 3.42514 3.9948 3.9948C3.42514 4.56445 3.09825 5.33517 2.92637 6.61358C2.75159 7.91356 2.75 9.62178 2.75 12C2.75 12.2905 2.75 12.5715 2.75034 12.8435L3.75148 11.9675C4.66275 11.1702 6.03617 11.2159 6.89238 12.0721L11.1821 16.3618C11.8693 17.0491 12.9511 17.1428 13.7463 16.5839L14.0445 16.3744C15.1887 15.5702 16.7368 15.6634 17.7764 16.599L20.6068 19.1463C20.8917 18.548 21.0609 17.7618 21.1513 16.6527C21.2494 15.4482 21.25 13.9459 21.25 12C21.25 9.62178 21.2484 7.91356 21.0736 6.61358C20.9018 5.33517 20.5749 4.56445 20.0052 3.9948C19.4355 3.42514 18.6648 3.09825 17.3864 2.92637C16.0864 2.75159 14.3782 2.75 12 2.75C9.62178 2.75 7.91356 2.75159 6.61358 2.92637Z"
-				fill="#fff" />
-		</symbol>
-
-		<!-- House -->
-		<symbol id="house" viewBox="0 0 24 24" fill="none">
-			<path
-				d="M14 21.0001V15.0001H10V21.0001M19 9.77818V16.2001C19 17.8802 19 18.7203 18.673 19.362C18.3854 19.9265 17.9265 20.3855 17.362 20.6731C16.7202 21.0001 15.8802 21.0001 14.2 21.0001H9.8C8.11984 21.0001 7.27976 21.0001 6.63803 20.6731C6.07354 20.3855 5.6146 19.9265 5.32698 19.362C5 18.7203 5 17.8802 5 16.2001V9.77753M21 12.0001L15.5668 5.96405C14.3311 4.59129 13.7133 3.9049 12.9856 3.65151C12.3466 3.42894 11.651 3.42899 11.0119 3.65165C10.2843 3.90516 9.66661 4.59163 8.43114 5.96458L3 12.0001"
-				stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-		</symbol>
-	</svg>
-
 	<header>
 		<div class="mp_header conteiner p_middle">
 			<a class="logo" href="">MyPage</a>
 			<ul class="mp_nav_list">
-				<li class="nav_item svg_link">
-					<a class="home_btn" href="#">
+				<li class="nav_item">
+					<a class="nav_btn" href="#">
 						<svg class="svg_btn">
-							<use href="#house"></use>
+							<use href="../img/sprite.svg#house"></use>
 						</svg>
 						Main page
 					</a>
 				</li>
 				<li class="nav_item">
-					<a class="gallery_btn" href="gallery.html">
+					<a class="nav_btn" href="gallery.html">
 						<svg class="svg_btn">
-							<use href="#gallery"></use>
+							<use href="../img/sprite.svg#gallery"></use>
 						</svg>
 						Gallery
 					</a>
 				</li>
 				<li class="nav_item home_work">
-					<a class="hw_btn" href="#">
+					<a class="nav_btn" href="#">
 						<svg class="svg_btn">
-							<use href="#arrow_down"></use>
+							<use href="../img/sprite.svg#arrow_down"></use>
 						</svg>
 						Home works
 					</a>
@@ -73,9 +41,9 @@
 						<li><a href="inline_block.html">Inline-Block</a></li>
 						<li><a href="float.html">Float</a></li>
 						<li class="layouts">
-							<a class="ly_btn" href="#">
+							<a class="nav_btn" href="#">
 								<svg class="svg_btn">
-									<use href="#arrow_down"></use>
+									<use href="../img/sprite.svg#arrow_down"></use>
 								</svg>
 								Layout
 							</a>
