animation for gradient box

--- a/index.html
+++ b/index.html
@@ -10,6 +10,25 @@
 
 <body class="main_body">
 	<header>
+		<aside class="sidebar">
+			<ul class="sidebar_menu">
+				<li class="sidebar_menu_item"><a href="#"><svg>
+							<use href=""></use>
+						</svg>Checkbox</a></li>
+				<li class="sidebar_menu_item"><a href="#"><svg>
+							<use href=""></use>
+						</svg>Home</a></li>
+				<li class="sidebar_menu_item"><a href="#"><svg>
+							<use href=""></use>
+						</svg>Stars</a></li>
+				<li class="sidebar_menu_item"><a href="#"><svg>
+							<use href=""></use>
+						</svg>Bookmarks</a></li>
+				<li class="sidebar_menu_item"><a href="#"><svg>
+							<use href=""></use>
+						</svg>Cloud</a></li>
+			</ul>
+		</aside>
 		<div class="mp_header conteiner p_middle">
 			<a class="logo" href="">MyPage</a>
 			<ul class="mp_nav_list">
@@ -65,23 +84,44 @@
 	</header>
 	<main class="p_middle conteiner">
 		<section class=" gradient_content">
-			<div class="gradient_box linear"></div>
-			<div class="gradient_box overlay">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis quae
-				laudantium odit iste! Repellendus saepe delectus architecto. Itaque explicabo dolore temporibus eius
-				vitae excepturi corrupti, dolorum dignissimos. Delectus cumque iste quia, architecto temporibus veniam,
-				veritatis libero natus dicta explicabo tenetur distinctio dolorum atque. Necessitatibus sunt illo in
-				harum, fuga ipsum temporibus totam sit dolores eaque, saepe et unde iure quidem minima vitae rem
-				perferendis? Quis blanditiis a non laboriosam vero necessitatibus. A totam reiciendis recusandae natus
-				voluptate, voluptatibus quisquam ullam delectus magnam quidem architecto. Qui dolorum accusamus
-				temporibus nesciunt possimus adipisci veritatis itaque, fuga illo commodi omnis aspernatur ducimus ipsa
-				expedita non deserunt sapiente deleniti excepturi fugiat vitae tenetur a? Similique adipisci suscipit a
-				nobis impedit! Amet delectus maiores fugiat.</div>
-			<div class="gradient_box radial"></div>
+			<div class="gradient_box linear">
+				<span class="border border_top"></span>
+				<span class="border border_bottom"></span>
+				<span class="border border_left"></span>
+				<span class="border border_right"></span>
+			</div>
+			<div class="gradient_box overlay">
+				<p class="gradient_box_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis quae
+					laudantium odit iste! Repellendus saepe delectus architecto. Itaque explicabo dolore temporibus eius
+					vitae excepturi corrupti, dolorum dignissimos. Delectus cumque iste quia, architecto temporibus
+					veniam,
+					veritatis libero natus dicta explicabo tenetur distinctio dolorum atque. Necessitatibus sunt illo in
+					harum, fuga ipsum temporibus totam sit dolores eaque, saepe et unde iure quidem minima vitae rem
+					perferendis? Quis blanditiis a non laboriosam vero necessitatibus. A totam reiciendis recusandae
+					natus
+					voluptate, voluptatibus quisquam ullam delectus magnam quidem architecto. Qui dolorum accusamus
+					temporibus nesciunt possimus adipisci veritatis itaque, fuga illo commodi omnis aspernatur ducimus
+					ipsa
+					expedita non deserunt sapiente deleniti excepturi fugiat vitae tenetur a? Similique adipisci
+					suscipit a
+					nobis impedit! Amet delectus maiores fugiat.</p>
+				<span class="border border_top"></span>
+				<span class="border border_bottom"></span>
+				<span class="border border_left"></span>
+				<span class="border border_right"></span>
+			</div>
+			<div class="gradient_box radial">
+				<span class="border border_top"></span>
+				<span class="border border_bottom"></span>
+				<span class="border border_left"></span>
+				<span class="border border_right"></span>
+			</div>
 		</section>
 	</main>
 
 </body>
 <footer>
-	
+
 </footer>
+
 </html>
