--- a/index.html
+++ b/index.html
@@ -9,26 +9,62 @@
 </head>
 
 <body class="main_body">
+	<aside class="sidebar">
+		<ul class="sidebar_menu">
+			<li class="sidebar_menu_item">
+				<a href="#">
+					<span class="item_box">
+						<svg>
+							<use href="img/sprite.svg#sidebar_heart"></use>
+						</svg>
+					</span>
+					<p>Checkbox</p>
+				</a>
+			</li>
+			<li class="sidebar_menu_item">
+				<a href="#">
+					<span class="item_box">
+						<svg>
+							<use href="img/sprite.svg#sidebar_house"></use>
+						</svg>
+					</span>
+					<p>Home</p>
+				</a>
+			</li>
+			<li class="sidebar_menu_item">
+				<a href="#">
+					<span class="item_box">
+						<svg>
+							<use href="img/sprite.svg#sidebar_star"></use>
+						</svg>
+					</span>
+					<p>Stars</p>
+				</a>
+			</li>
+			<li class="sidebar_menu_item">
+				<a href="#">
+					<span class="item_box"><svg>
+							<use href="img/sprite.svg#sidebar_bookmarks"></use>
+						</svg>
+					</span>
+					<p>Bookmarks</p>
+				</a>
+			</li>
+			<li class="sidebar_menu_item">
+				<a href="#">
+					<span class="item_box">
+						<svg>
+							<use href="img/sprite.svg#sidebar_cloud"></use>
+						</svg>
+					</span>
+					<p>Cloud</p>
+				</a>
+			</li>
+		</ul>
+	</aside>
 	<header>
-		<aside class="sidebar">
-			<ul class="sidebar_menu">
-				<li class="sidebar_menu_item"><a href="#"><svg>
-							<use href=""></use>
-						</svg>Checkbox</a></li>
-				<li class="sidebar_menu_item"><a href="#"><svg>
-							<use href=""></use>
-						</svg>Home</a></li>
-				<li class="sidebar_menu_item"><a href="#"><svg>
-							<use href=""></use>
-						</svg>Stars</a></li>
-				<li class="sidebar_menu_item"><a href="#"><svg>
-							<use href=""></use>
-						</svg>Bookmarks</a></li>
-				<li class="sidebar_menu_item"><a href="#"><svg>
-							<use href=""></use>
-						</svg>Cloud</a></li>
-			</ul>
-		</aside>
+
+
 		<div class="mp_header conteiner p_middle">
 			<a class="logo" href="">MyPage</a>
 			<ul class="mp_nav_list">
