--- a/index.html
+++ b/index.html
@@ -62,102 +62,129 @@
 			</li>
 		</ul>
 	</aside>
-	<header>
+	<div class="wrapper">
+		<header>
+			<div class="mp_header conteiner p_middle">
+				<a class="logo" href="">MyPage</a>
+				<ul class="mp_nav_list">
+					<li class="nav_item">
+						<a class="nav_btn" href="#">
+							<svg class="svg_btn">
+								<use href="../img/sprite.svg#house"></use>
+							</svg>
+							Main page
+						</a>
+					</li>
+					<li class="nav_item">
+						<a class="nav_btn" href="gallery.html">
+							<svg class="svg_btn">
+								<use href="../img/sprite.svg#gallery"></use>
+							</svg>
+							Gallery
+						</a>
+					</li>
+					<li class="nav_item home_work">
+						<a class="nav_btn" href="#">
+							<svg class="svg_btn">
+								<use href="../img/sprite.svg#arrow_down"></use>
+							</svg>
+							Home works
+						</a>
+						<ul class="mp_nav_list_2">
+							<li><a href="table.html">Table</a></li>
+							<li><a href="inline_block.html">Inline-Block</a></li>
+							<li><a href="float.html">Float</a></li>
+							<li class="layouts">
+								<a class="nav_btn" href="#">
+									<svg class="svg_btn">
+										<use href="../img/sprite.svg#arrow_down"></use>
+									</svg>
+									Layout
+								</a>
+								<ul class="mp_nav_list_3">
+									<li><a href="flex.html">Flex</a></li>
+								</ul>
+							</li>
+						</ul>
+					</li>
+				</ul>
 
 
-		<div class="mp_header conteiner p_middle">
-			<a class="logo" href="">MyPage</a>
-			<ul class="mp_nav_list">
-				<li class="nav_item">
-					<a class="nav_btn" href="#">
-						<svg class="svg_btn">
-							<use href="../img/sprite.svg#house"></use>
+				<ul class="my_social_list">
+					<li class="my_social_item"><a class="fcb" href="#"></a></li>
+					<li class="my_social_item"><a class="insta" href="#"></a></li>
+					<li class="my_social_item"><a class="gith" href="#"></a></li>
+				</ul>
+			</div>
+		</header>
+		<main class="p_middle conteiner">
+			<section class="gradient_content">
+				<div class="gradient_box linear">
+					<span class="border border_top"></span>
+					<span class="border border_bottom"></span>
+					<span class="border border_left"></span>
+					<span class="border border_right"></span>
+				</div>
+				<div class="gradient_box overlay">
+					<p class="gradient_box_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis quae
+						laudantium odit iste! Repellendus saepe delectus architecto. Itaque explicabo dolore temporibus
+						eius
+						vitae excepturi corrupti, dolorum dignissimos. Delectus cumque iste quia, architecto temporibus
+						veniam,
+						veritatis libero natus dicta explicabo tenetur distinctio dolorum atque. Necessitatibus sunt
+						illo in
+						harum, fuga ipsum temporibus totam sit dolores eaque, saepe et unde iure quidem minima vitae rem
+						perferendis? Quis blanditiis a non laboriosam vero necessitatibus. A totam reiciendis recusandae
+						natus
+						voluptate, voluptatibus quisquam ullam delectus magnam quidem architecto. Qui dolorum accusamus
+						temporibus nesciunt possimus adipisci veritatis itaque, fuga illo commodi omnis aspernatur
+						ducimus
+						ipsa
+						expedita non deserunt sapiente deleniti excepturi fugiat vitae tenetur a? Similique adipisci
+						suscipit a
+						nobis impedit! Amet delectus maiores fugiat.</p>
+					<span class="border border_top"></span>
+					<span class="border border_bottom"></span>
+					<span class="border border_left"></span>
+					<span class="border border_right"></span>
+				</div>
+				<div class="gradient_box radial">
+					<span class="border border_top"></span>
+					<span class="border border_bottom"></span>
+					<span class="border border_left"></span>
+					<span class="border border_right"></span>
+				</div>
+			</section>
+
+			<div class="pop_up_menu">
+				<div class="pop_up_box">
+					<span class="gear">
+						<svg>
+							<use href="img/sprite.svg#gear"></use>
 						</svg>
-						Main page
-					</a>
-				</li>
-				<li class="nav_item">
-					<a class="nav_btn" href="gallery.html">
-						<svg class="svg_btn">
-							<use href="../img/sprite.svg#gallery"></use>
-						</svg>
-						Gallery
-					</a>
-				</li>
-				<li class="nav_item home_work">
-					<a class="nav_btn" href="#">
-						<svg class="svg_btn">
-							<use href="../img/sprite.svg#arrow_down"></use>
-						</svg>
-						Home works
-					</a>
-					<ul class="mp_nav_list_2">
-						<li><a href="table.html">Table</a></li>
-						<li><a href="inline_block.html">Inline-Block</a></li>
-						<li><a href="float.html">Float</a></li>
-						<li class="layouts">
-							<a class="nav_btn" href="#">
-								<svg class="svg_btn">
-									<use href="../img/sprite.svg#arrow_down"></use>
-								</svg>
-								Layout
-							</a>
-							<ul class="mp_nav_list_3">
-								<li><a href="flex.html">Flex</a></li>
-							</ul>
-						</li>
+					</span>
+					<ul class="pop_up_list">
+						<li class="pop_up_item"><a href="#">
+								<p>Button 1</p>
+							</a></li>
+						<li class="pop_up_item"><a href="#">
+								<p>Button 2</p>
+							</a></li>
+						<li class="pop_up_item"><a href="#">
+								<p>Button 3</p>
+							</a></li>
+						<li class="pop_up_item"><a href="#">
+								<p>Button 4</p>
+							</a></li>
 					</ul>
-				</li>
-			</ul>
+				</div>
 
 
-			<ul class="my_social_list">
-				<li class="my_social_item"><a class="fcb" href="#"></a></li>
-				<li class="my_social_item"><a class="insta" href="#"></a></li>
-				<li class="my_social_item"><a class="gith" href="#"></a></li>
-			</ul>
-		</div>
-	</header>
-	<main class="p_middle conteiner">
-		<section class=" gradient_content">
-			<div class="gradient_box linear">
-				<span class="border border_top"></span>
-				<span class="border border_bottom"></span>
-				<span class="border border_left"></span>
-				<span class="border border_right"></span>
 			</div>
-			<div class="gradient_box overlay">
-				<p class="gradient_box_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis quae
-					laudantium odit iste! Repellendus saepe delectus architecto. Itaque explicabo dolore temporibus eius
-					vitae excepturi corrupti, dolorum dignissimos. Delectus cumque iste quia, architecto temporibus
-					veniam,
-					veritatis libero natus dicta explicabo tenetur distinctio dolorum atque. Necessitatibus sunt illo in
-					harum, fuga ipsum temporibus totam sit dolores eaque, saepe et unde iure quidem minima vitae rem
-					perferendis? Quis blanditiis a non laboriosam vero necessitatibus. A totam reiciendis recusandae
-					natus
-					voluptate, voluptatibus quisquam ullam delectus magnam quidem architecto. Qui dolorum accusamus
-					temporibus nesciunt possimus adipisci veritatis itaque, fuga illo commodi omnis aspernatur ducimus
-					ipsa
-					expedita non deserunt sapiente deleniti excepturi fugiat vitae tenetur a? Similique adipisci
-					suscipit a
-					nobis impedit! Amet delectus maiores fugiat.</p>
-				<span class="border border_top"></span>
-				<span class="border border_bottom"></span>
-				<span class="border border_left"></span>
-				<span class="border border_right"></span>
-			</div>
-			<div class="gradient_box radial">
-				<span class="border border_top"></span>
-				<span class="border border_bottom"></span>
-				<span class="border border_left"></span>
-				<span class="border border_right"></span>
-			</div>
-		</section>
-	</main>
+		</main>
+	</div>
 
 </body>
-<footer>
 
-</footer>
 
 </html>
